// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  padding-bottom: inherit;
}

.c1 {
  width: 100%;
  border: 1px solid #b6b6b6;
  padding: 12px 16px;
  margin: 4px 0;
  padding-bottom: inherit;
  outline: 0;
  border-radius: 8px;
}

<input
  class="c0 c1"
  href=""
  name="nome"
  placeholder="Nome"
  type="text"
  value="Greice"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  padding-bottom: inherit;
}

.c1 {
  width: 100%;
  border: 1px solid #b6b6b6;
  padding: 12px 16px;
  margin: 4px 0;
  padding-bottom: inherit;
  outline: 0;
  border-radius: 8px;
  border-color: #dc3545;
}

.c1 + span {
  color: #dc3545;
  font-size: 11px;
}

<input
  class="c0 c1"
  href=""
  name="email"
  placeholder="Email"
  type="text"
  value="greicekelly@gmail.com"
/>
`;

exports[`<textField /> renders component 1`] = `
.c0 {
  padding-bottom: inherit;
}

.c1 {
  width: 100%;
  border: 1px solid #b6b6b6;
  padding: 12px 16px;
  margin: 4px 0;
  padding-bottom: inherit;
  outline: 0;
  border-radius: 8px;
}

<input
  class="c0 c1"
  href=""
  name="nome"
  placeholder="Nome"
  type="text"
  value="Greice"
/>
`;
